# microprocessor

./: .gitignore  CMakeLists.txt  README.md
includes/: component.h  microprocessor.h
includes/logic-gates/: and.h  component.h  not.h  or.h  xor.h
src/: components.c  main.c
src/logic-gates/: and.c  not.c  or.c  xor.c
